fix: authentication jwt service, add missing query methods, delete roomvailAbilityServce